# MAI-cpp-oop-lab-5

./: CMakeLists.txt  README.md
.cache/clangd/index/: DynamicArray.h.BCE3BF9BBF427521.idx  MemoryResource.h.1B882EE65CFD0CF8.idx  MyStruct.h.1CBEAE66BD36EFF9.idx  main.cpp.AE366220C1E99B8E.idx  test_lab.cpp.5AFF65EB72066A26.idx
.devcontainer/: devcontainer.json
include/: DynamicArray.h  MemoryResource.h  MyStruct.h
src/: main.cpp
tests/: test_lab.cpp
